# DAMO-ConvAI

./: .gitignore  LICENSE  README.md
SDPO/sotopia/: .gitignore  .pre-commit-config.yaml  LICENSE  del_tag.py  look_dialogue.py  look_tags.py  pyproject.toml
SDPO/sotopia/docs/: package.json  tailwind.config.ts
SDPO/sotopia/docs/pages/: index.mdx  simulation_modes.md
SDPO/sotopia/dpo/: auto_tail.py  locate.py  prompt_reverse_engineering.py  sft_data.py
SDPO/sotopia/dpo/self-chat/: data_filtering_negative.py  data_filtering_positive.py
SDPO/sotopia/dpo/with4o/: data_filtering_negative.py  data_filtering_positive.py
SDPO/sotopia/examples/: evaluate_existing_episode.py  generate_scenarios.py
SDPO/sotopia/human_eval/: agreement.py  requirements.txt  settings.py
SDPO/sotopia/human_eval/pilot_study_payment_info/: PaymentInfo.html
SDPO/sotopia/human_eval/sotopia_official_study/: SotopiaEvalInstruction.html
SDPO/sotopia/notebooks/: redis_stats.ipynb  upload_human_annotation_csv_to_db.ipynb
SDPO/sotopia/notebooks/tutorials/: 1.1-setup.ipynb  1.2-browse-data.ipynb
SDPO/sotopia/scripts/: run_all.sh  run_interaction.sh  run_script_full.sh
SDPO/sotopia/sotopia/: server.py  utils.py
SDPO/sotopia/sotopia/agents/: __init__.py  base_agent.py  llm_agent.py
SDPO/sotopia/sotopia/cli/: __init__.py
SDPO/sotopia/sotopia/database/: auto_expires_mixin.py  env_agent_combo_storage.py  logs.py  persistent_profile.py
SDPO/sotopia/sotopia/envs/: __init__.py  evaluators.py  parallel.py
SDPO/sotopia/sotopia/generation_utils/: generate.py  llama2.py
SDPO/sotopia/sotopia/messages/: __init__.py  message_classes.py
SDPO/sotopia/sotopia/renderers/: __init__.py  xml_renderer.py
SDPO/sotopia/sotopia/samplers/: constraint_based_sampler.py  uniform_sampler.py
SDPO/sotopia/sotopia_conf/: gin_utils.py  rerun_missing_episodes_with_tag.gin  run_async_server_in_batch.gin
SDPO/sotopia/sotopia_conf/generation_utils_conf/: generate.gin
SDPO/sotopia/stubs/logzero/: __init__.py
SDPO/sotopia/stubs/names/: __init__.py
SDPO/sotopia/tests/cli/: test_install.py
SDPO/sotopia/tests/database/: test_serialization.py
SDPO/sotopia/tests/envs/: test_evaluators.py
SDPO/sotopia/tests/generation_utils/: test_generation.py
graphix/: Dockerfile  LICENSE  Makefile  NOTICE  README.md  backup_make  cabal.project  fb-util-cabal.patch  hie.yaml  picard.thrift  pyproject.toml  render.html  resources_1.1.0.json
graphix/configs/: data_pre_dev.json  data_pre_train.json  eval.json  train.json
graphix/data_all_in/: Database.py  Graph_Processing.py  alias.py  graph_pedia_debug.py  map_function.py  map_subword.py  map_subword_question.py  map_subword_schema.py  map_subword_schema_linking.py  map_subword_serialize.py  map_subword_serialize_random.py  map_subword_serialize_sampling.py  merge_train.py  relation_prompt.py  sampling.py  uni_test.py
graphix/data_all_in/preprocess/: README.md  common_utils.py  common_utils_proton.py  inject_syntax.py  process_dataset.py  process_graphs.py
graphix/data_all_in/run/: run_graph_all.sh  run_graph_pedia.sh  run_pre.sh  run_preprocessing_dev.sh  run_preprocessing_training.sh  run_syntax.sh
graphix/dev_result/: combined_args.json  eval_results.json  predict.py  predict.sql  predictions_eval.json
graphix/gen-hs/: picard-gen-hs.cabal
graphix/gen-py3/: setup.py
graphix/picard/: Setup.hs  picard.cabal
graphix/picard/exe/: Main.hs
graphix/picard/tests/: Spec.hs  doctests.hs
graphix/seq2seq/: run_peteshaw_dev.py  run_peteshaw_train.py  run_seq2seq_eval.py  run_seq2seq_train.py
graphix/seq2seq/datasets/spider/: spider.py
graphix/seq2seq/metrics/spider/: spider.py  spider_exact_match.py  spider_test_suite.py
graphix/seq2seq/models/: auto_factory.py  model_utils.py  modeling_auto.py  modeling_t5.py
graphix/seq2seq/models/graphix/: constants.py  rgat.py  rgat_eval.py  rgat_picard.py  rgat_tuning.py
graphix/seq2seq/utils/: args.py  bridge_content_encoder.py  cosql.py  dataset.py  dataset_graph.py  dataset_graph_com.py  dataset_loader.py  picard_model_wrapper.py  pipeline.py  spider.py  trainer.py
graphix/tests/: test_dataset.py  test_picard_client.py
graphix/train_data/: combined_args.json
mmevol/: README.md  pyproject.toml
mmevol/dataengine/: README.md  multi_round.py  prompt.py
mmevol/dataengine/datasets/: process.py
mmevol/dataengine/score_process/: difficulty_scoring_v0.py  prompt_score.py
mmevol/dataengine/utils/: a.ipynb  data_process.py  small_obj_process.txt
mmevol/llava/: __init__.py  conversation.py
mmevol/llava/eval/: blink_eval.py  cvbench_eval.py  eval_textvqa.py  mia_eval.py  mm_vet_eval.py  mminst_eval.py  mmvp_eval.py  model_vqa_blink.py  model_vqa_cvbench.py  model_vqa_gqa.py  model_vqa_mia.py  model_vqa_mminst.py  model_vqa_mminst2.py  model_vqa_mmvp.py  model_vqa_omnibench.py  model_vqa_textvqa.py  model_vqa_vqa2.py
mmevol/llava/model/: __init__.py
mmevol/llava/train/: llava_trainer.py  train.py  train_mem.py  train_xformers.py
mmevol/mmevol_sft_data/: README.md  base.py  multi_round.py
mmevol/mmevol_sft_data/datasets/: process.ipynb
mmevol/mmevol_sft_data/datasets/meta_data/: 0_coco_train2017_000000203269.jpg.json  1000_ai2d_images_3556.png.json  1001_ai2d_images_245.png.json  1002_ai2d_images_903.png.json  1003_ai2d_images_2523.png.json  1004_ai2d_images_921.png.json  1005_ai2d_images_1481.png.json  1006_ai2d_images_2222.png.json  1007_ai2d_images_54.png.json  1008_ai2d_images_1217.png.json  1009_ai2d_images_2168.png.json  100_coco_train2017_000000048863.jpg.json  1010_ai2d_images_1152.png.json  1011_ai2d_images_240.png.json  1012_ai2d_images_1642.png.json  1013_ai2d_images_3189.png.json  (+1595 more)
mmevol/mmevol_sft_data/score_process/: base.py  difficulty_scoring.py  difficulty_scoring_v0.py  difficulty_scoring_v123.py
mmevol/mmevol_sft_data/utils/: bertopic.ipynb  data_process.py  object_count.json  small_obj.txt
mmevol/vlmevalkit/: requirements.txt  run.py
mmevol/vlmevalkit/script/: run_inference_2.sh  run_inference_4.sh  run_inference_8.sh
mmevol/vlmevalkit/vlmeval/: config.py
(+7691 files in other folders)
